--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -61,6 +61,9 @@
     "buy_all":"Buy All",
     "are_you_sure":"Are you sure you want to purchase all?",
     "sum":"Sum",
-    "history":"History"
+    "history":"History",
+    "slogan1":"Buy now or cry later!",
+    "slogan2":"Online shopping: the only cardio you need!",
+    "slogan3":"Our deals are hotter than Sahara Desert!"
     
 }
