--- a/src/assets/i18n/geo.json
+++ b/src/assets/i18n/geo.json
@@ -61,5 +61,8 @@
     "buy_all":"ყველას ყიდვა",
     "are_you_sure":"დარწმუნებული ხარ რომ ყველაფრის ყიდვა გინდა?",
     "sum":"ჯამი",
-    "history":"ისტორია"
+    "history":"ისტორია",
+    "slogan1":"იყიდე ახლა ან ინანე მერე!",
+    "slogan2":"ონლაინ შოპინგი: ერთადერთი კარდიო რომელიც გჭირდება!",
+    "slogan3":"ჩვენი შემოთავაზებები საჰარას უდაბნოზე ცხელია!"
 }
