--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -64,6 +64,7 @@
     "history":"History",
     "slogan1":"Buy now or cry later!",
     "slogan2":"Online shopping: the only cardio you need!",
-    "slogan3":"Our deals are hotter than Sahara Desert!"
+    "slogan3":"Our deals are hotter than Sahara Desert!",
+    "product-image":"Product Image"
     
 }
