--- a/src/assets/i18n/geo.json
+++ b/src/assets/i18n/geo.json
@@ -64,5 +64,6 @@
     "history":"ისტორია",
     "slogan1":"იყიდე ახლა ან ინანე მერე!",
     "slogan2":"ონლაინ შოპინგი: ერთადერთი კარდიო რომელიც გჭირდება!",
-    "slogan3":"ჩვენი შემოთავაზებები საჰარას უდაბნოზე ცხელია!"
+    "slogan3":"ჩვენი შემოთავაზებები საჰარას უდაბნოზე ცხელია!",
+    "product-image":"პროდუქტის ფოტო"
 }
