feat-api-integration

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,7 +15,7 @@
     "Success":"Successfull",
     "author":"Author",
     "signin":"Sign In",
-    "nonEqual":"Non Equal Passwords",
+    "nonEqual":"Incorreect or non Equal Passwords",
     "employee-reg":"Employee Registration",
     "not_enough":"Balance is not enough",
     "name":"Name",
