--- a/src/assets/i18n/geo.json
+++ b/src/assets/i18n/geo.json
@@ -15,7 +15,7 @@
     "Success":"ცვლილებამ წარმატებით ჩაიარა",
     "author":"ავტორი",
     "signin":"შესვლა",
-    "nonEqual":"პაროლები არ ემთხვევა",
+    "nonEqual":"პაროლები არასწორია ან არ ემთხვევა",
     "employee-reg":"თანამშრომლის რეგისტრაცია",
     "not_enough":"ბალანსი არ არის საკმარისი",
     "name":"სახელი",
