--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -65,6 +65,7 @@
     "slogan1":"Buy now or cry later!",
     "slogan2":"Online shopping: the only cardio you need!",
     "slogan3":"Our deals are hotter than Sahara Desert!",
-    "product-image":"Product Image"
+    "product-image":"Product Image",
+    "no_items":"No items in the cart"
     
 }
