--- a/src/assets/i18n/geo.json
+++ b/src/assets/i18n/geo.json
@@ -65,5 +65,6 @@
     "slogan1":"იყიდე ახლა ან ინანე მერე!",
     "slogan2":"ონლაინ შოპინგი: ერთადერთი კარდიო რომელიც გჭირდება!",
     "slogan3":"ჩვენი შემოთავაზებები საჰარას უდაბნოზე ცხელია!",
-    "product-image":"პროდუქტის ფოტო"
+    "product-image":"პროდუქტის ფოტო",
+    "no_items":"კალათა ცარიელია"
 }
